# serializer version: 1
# name: TestJobSeekerAssignment.test_assign_job_seeker[False-False][assignment creation sql queries]
  dict({
    'num_queries': 2,
    'queries': list([
      dict({
        'origin': list([
          'JobSeekerAssignmentQuerySet.first[<site-packages>/django/db/models/query.py]',
          'JobSeekerAssignmentQuerySet.upsert_assignment[users/models.py]',
        ]),
        'sql': '''
          SELECT "users_jobseekerassignment"."id",
                 "users_jobseekerassignment"."created_at",
                 "users_jobseekerassignment"."updated_at",
                 "users_jobseekerassignment"."job_seeker_id",
                 "users_jobseekerassignment"."professional_id",
                 "users_jobseekerassignment"."prescriber_organization_id",
                 "users_jobseekerassignment"."company_id",
                 "users_jobseekerassignment"."last_action_kind",
                 "users_jobseekerassignment"."assigned_to_unknown_advisor",
                 "users_jobseekerassignment"."started_at",
                 "users_jobseekerassignment"."ended_at"
          FROM "users_jobseekerassignment"
          WHERE (NOT ("users_jobseekerassignment"."last_action_kind" = %s)
                 AND "users_jobseekerassignment"."company_id" IS NULL
                 AND "users_jobseekerassignment"."job_seeker_id" = %s
                 AND "users_jobseekerassignment"."prescriber_organization_id" IS NULL
                 AND "users_jobseekerassignment"."professional_id" = %s
                 AND NOT ("users_jobseekerassignment"."last_action_kind" = %s))
          ORDER BY "users_jobseekerassignment"."updated_at" DESC
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'JobSeekerAssignment.save[<site-packages>/django/db/models/base.py]',
          'JobSeekerAssignmentQuerySet.upsert_assignment[users/models.py]',
        ]),
        'sql': '''
          INSERT INTO "users_jobseekerassignment" ("created_at",
                                                   "updated_at",
                                                   "job_seeker_id",
                                                   "professional_id",
                                                   "prescriber_organization_id",
                                                   "company_id",
                                                   "last_action_kind",
                                                   "assigned_to_unknown_advisor",
                                                   "started_at",
                                                   "ended_at")
          VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s) RETURNING "users_jobseekerassignment"."id"
        ''',
      }),
    ]),
  })
# ---
# name: TestJobSeekerAssignment.test_assign_job_seeker[False-False][assignment update sql queries]
  dict({
    'num_queries': 2,
    'queries': list([
      dict({
        'origin': list([
          'JobSeekerAssignmentQuerySet.first[<site-packages>/django/db/models/query.py]',
          'JobSeekerAssignmentQuerySet.upsert_assignment[users/models.py]',
        ]),
        'sql': '''
          SELECT "users_jobseekerassignment"."id",
                 "users_jobseekerassignment"."created_at",
                 "users_jobseekerassignment"."updated_at",
                 "users_jobseekerassignment"."job_seeker_id",
                 "users_jobseekerassignment"."professional_id",
                 "users_jobseekerassignment"."prescriber_organization_id",
                 "users_jobseekerassignment"."company_id",
                 "users_jobseekerassignment"."last_action_kind",
                 "users_jobseekerassignment"."assigned_to_unknown_advisor",
                 "users_jobseekerassignment"."started_at",
                 "users_jobseekerassignment"."ended_at"
          FROM "users_jobseekerassignment"
          WHERE (NOT ("users_jobseekerassignment"."last_action_kind" = %s)
                 AND "users_jobseekerassignment"."company_id" IS NULL
                 AND "users_jobseekerassignment"."job_seeker_id" = %s
                 AND "users_jobseekerassignment"."prescriber_organization_id" IS NULL
                 AND "users_jobseekerassignment"."professional_id" = %s
                 AND NOT ("users_jobseekerassignment"."last_action_kind" = %s))
          ORDER BY "users_jobseekerassignment"."updated_at" DESC
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'JobSeekerAssignment.save[<site-packages>/django/db/models/base.py]',
          'JobSeekerAssignmentQuerySet.upsert_assignment[users/models.py]',
        ]),
        'sql': '''
          UPDATE "users_jobseekerassignment"
          SET "created_at" = %s,
              "updated_at" = %s,
              "job_seeker_id" = %s,
              "professional_id" = %s,
              "prescriber_organization_id" = NULL,
              "company_id" = NULL,
              "last_action_kind" = %s,
              "assigned_to_unknown_advisor" = %s,
              "started_at" = NULL,
              "ended_at" = NULL
          WHERE "users_jobseekerassignment"."id" = %s
        ''',
      }),
    ]),
  })
# ---
# name: TestJobSeekerAssignment.test_assign_job_seeker[False-True][assignment creation sql queries]
  dict({
    'num_queries': 2,
    'queries': list([
      dict({
        'origin': list([
          'JobSeekerAssignmentQuerySet.first[<site-packages>/django/db/models/query.py]',
          'JobSeekerAssignmentQuerySet.upsert_assignment[users/models.py]',
        ]),
        'sql': '''
          SELECT "users_jobseekerassignment"."id",
                 "users_jobseekerassignment"."created_at",
                 "users_jobseekerassignment"."updated_at",
                 "users_jobseekerassignment"."job_seeker_id",
                 "users_jobseekerassignment"."professional_id",
                 "users_jobseekerassignment"."prescriber_organization_id",
                 "users_jobseekerassignment"."company_id",
                 "users_jobseekerassignment"."last_action_kind",
                 "users_jobseekerassignment"."assigned_to_unknown_advisor",
                 "users_jobseekerassignment"."started_at",
                 "users_jobseekerassignment"."ended_at"
          FROM "users_jobseekerassignment"
          WHERE (NOT ("users_jobseekerassignment"."last_action_kind" = %s)
                 AND "users_jobseekerassignment"."company_id" = %s
                 AND "users_jobseekerassignment"."job_seeker_id" = %s
                 AND "users_jobseekerassignment"."prescriber_organization_id" IS NULL
                 AND "users_jobseekerassignment"."professional_id" = %s
                 AND NOT ("users_jobseekerassignment"."last_action_kind" = %s))
          ORDER BY "users_jobseekerassignment"."updated_at" DESC
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'JobSeekerAssignment.save[<site-packages>/django/db/models/base.py]',
          'JobSeekerAssignmentQuerySet.upsert_assignment[users/models.py]',
        ]),
        'sql': '''
          INSERT INTO "users_jobseekerassignment" ("created_at",
                                                   "updated_at",
                                                   "job_seeker_id",
                                                   "professional_id",
                                                   "prescriber_organization_id",
                                                   "company_id",
                                                   "last_action_kind",
                                                   "assigned_to_unknown_advisor",
                                                   "started_at",
                                                   "ended_at")
          VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s) RETURNING "users_jobseekerassignment"."id"
        ''',
      }),
    ]),
  })
# ---
# name: TestJobSeekerAssignment.test_assign_job_seeker[False-True][assignment update sql queries]
  dict({
    'num_queries': 2,
    'queries': list([
      dict({
        'origin': list([
          'JobSeekerAssignmentQuerySet.first[<site-packages>/django/db/models/query.py]',
          'JobSeekerAssignmentQuerySet.upsert_assignment[users/models.py]',
        ]),
        'sql': '''
          SELECT "users_jobseekerassignment"."id",
                 "users_jobseekerassignment"."created_at",
                 "users_jobseekerassignment"."updated_at",
                 "users_jobseekerassignment"."job_seeker_id",
                 "users_jobseekerassignment"."professional_id",
                 "users_jobseekerassignment"."prescriber_organization_id",
                 "users_jobseekerassignment"."company_id",
                 "users_jobseekerassignment"."last_action_kind",
                 "users_jobseekerassignment"."assigned_to_unknown_advisor",
                 "users_jobseekerassignment"."started_at",
                 "users_jobseekerassignment"."ended_at"
          FROM "users_jobseekerassignment"
          WHERE (NOT ("users_jobseekerassignment"."last_action_kind" = %s)
                 AND "users_jobseekerassignment"."company_id" = %s
                 AND "users_jobseekerassignment"."job_seeker_id" = %s
                 AND "users_jobseekerassignment"."prescriber_organization_id" IS NULL
                 AND "users_jobseekerassignment"."professional_id" = %s
                 AND NOT ("users_jobseekerassignment"."last_action_kind" = %s))
          ORDER BY "users_jobseekerassignment"."updated_at" DESC
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'JobSeekerAssignment.save[<site-packages>/django/db/models/base.py]',
          'JobSeekerAssignmentQuerySet.upsert_assignment[users/models.py]',
        ]),
        'sql': '''
          UPDATE "users_jobseekerassignment"
          SET "created_at" = %s,
              "updated_at" = %s,
              "job_seeker_id" = %s,
              "professional_id" = %s,
              "prescriber_organization_id" = NULL,
              "company_id" = %s,
              "last_action_kind" = %s,
              "assigned_to_unknown_advisor" = %s,
              "started_at" = NULL,
              "ended_at" = NULL
          WHERE "users_jobseekerassignment"."id" = %s
        ''',
      }),
    ]),
  })
# ---
# name: TestJobSeekerAssignment.test_assign_job_seeker[True-False][assignment creation sql queries]
  dict({
    'num_queries': 2,
    'queries': list([
      dict({
        'origin': list([
          'JobSeekerAssignmentQuerySet.first[<site-packages>/django/db/models/query.py]',
          'JobSeekerAssignmentQuerySet.upsert_assignment[users/models.py]',
        ]),
        'sql': '''
          SELECT "users_jobseekerassignment"."id",
                 "users_jobseekerassignment"."created_at",
                 "users_jobseekerassignment"."updated_at",
                 "users_jobseekerassignment"."job_seeker_id",
                 "users_jobseekerassignment"."professional_id",
                 "users_jobseekerassignment"."prescriber_organization_id",
                 "users_jobseekerassignment"."company_id",
                 "users_jobseekerassignment"."last_action_kind",
                 "users_jobseekerassignment"."assigned_to_unknown_advisor",
                 "users_jobseekerassignment"."started_at",
                 "users_jobseekerassignment"."ended_at"
          FROM "users_jobseekerassignment"
          WHERE (NOT ("users_jobseekerassignment"."last_action_kind" = %s)
                 AND "users_jobseekerassignment"."company_id" IS NULL
                 AND "users_jobseekerassignment"."job_seeker_id" = %s
                 AND "users_jobseekerassignment"."prescriber_organization_id" = %s
                 AND "users_jobseekerassignment"."professional_id" = %s
                 AND NOT ("users_jobseekerassignment"."last_action_kind" = %s))
          ORDER BY "users_jobseekerassignment"."updated_at" DESC
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'JobSeekerAssignment.save[<site-packages>/django/db/models/base.py]',
          'JobSeekerAssignmentQuerySet.upsert_assignment[users/models.py]',
        ]),
        'sql': '''
          INSERT INTO "users_jobseekerassignment" ("created_at",
                                                   "updated_at",
                                                   "job_seeker_id",
                                                   "professional_id",
                                                   "prescriber_organization_id",
                                                   "company_id",
                                                   "last_action_kind",
                                                   "assigned_to_unknown_advisor",
                                                   "started_at",
                                                   "ended_at")
          VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s) RETURNING "users_jobseekerassignment"."id"
        ''',
      }),
    ]),
  })
# ---
# name: TestJobSeekerAssignment.test_assign_job_seeker[True-False][assignment update sql queries]
  dict({
    'num_queries': 2,
    'queries': list([
      dict({
        'origin': list([
          'JobSeekerAssignmentQuerySet.first[<site-packages>/django/db/models/query.py]',
          'JobSeekerAssignmentQuerySet.upsert_assignment[users/models.py]',
        ]),
        'sql': '''
          SELECT "users_jobseekerassignment"."id",
                 "users_jobseekerassignment"."created_at",
                 "users_jobseekerassignment"."updated_at",
                 "users_jobseekerassignment"."job_seeker_id",
                 "users_jobseekerassignment"."professional_id",
                 "users_jobseekerassignment"."prescriber_organization_id",
                 "users_jobseekerassignment"."company_id",
                 "users_jobseekerassignment"."last_action_kind",
                 "users_jobseekerassignment"."assigned_to_unknown_advisor",
                 "users_jobseekerassignment"."started_at",
                 "users_jobseekerassignment"."ended_at"
          FROM "users_jobseekerassignment"
          WHERE (NOT ("users_jobseekerassignment"."last_action_kind" = %s)
                 AND "users_jobseekerassignment"."company_id" IS NULL
                 AND "users_jobseekerassignment"."job_seeker_id" = %s
                 AND "users_jobseekerassignment"."prescriber_organization_id" = %s
                 AND "users_jobseekerassignment"."professional_id" = %s
                 AND NOT ("users_jobseekerassignment"."last_action_kind" = %s))
          ORDER BY "users_jobseekerassignment"."updated_at" DESC
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'JobSeekerAssignment.save[<site-packages>/django/db/models/base.py]',
          'JobSeekerAssignmentQuerySet.upsert_assignment[users/models.py]',
        ]),
        'sql': '''
          UPDATE "users_jobseekerassignment"
          SET "created_at" = %s,
              "updated_at" = %s,
              "job_seeker_id" = %s,
              "professional_id" = %s,
              "prescriber_organization_id" = %s,
              "company_id" = NULL,
              "last_action_kind" = %s,
              "assigned_to_unknown_advisor" = %s,
              "started_at" = NULL,
              "ended_at" = NULL
          WHERE "users_jobseekerassignment"."id" = %s
        ''',
      }),
    ]),
  })
# ---
# name: TestModel.test_create_job_seeker_by_proxy[email jobseeker created by proxy]
  '''
  Bonjour Monsieur John DOE,
  
  Votre compte candidat vient d’être créé sur les Emplois de l’inclusion par Pierre DUPONT de Pres. Org..
  
  Pour finaliser votre inscription, merci de cliquer sur le lien suivant : [RESET PASSWORD LINK REMOVED]. Ce lien expirera dans 14 jours.
  Dès votre arrivée sur le site des Emplois de l’inclusion, vous serez invité à définir un mot de passe pour votre compte candidat.
  
  Cet e-mail a été généré et envoyé automatiquement, merci de ne pas y répondre.
  
  ---
  [TEST] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [TEST]
  Les emplois de l'inclusion
  http://localhost:8000/
  '''
# ---
